# cppHue

./: .gitignore  CMakeLists.txt  LICENSE  README.md  library.json
espTest/: CMakeLists.txt  platformio.ini
espTest/src/: main.cpp
pcTest/: CMakeLists.txt  huebridge.cpp  huebridge.h  jsonnavi.cpp  jsonnavi.h  main.cpp  simplehttpclient.cpp  simplehttpclient.h
src/: CMakeLists.txt  huebridge.cpp  huebridge.hpp  json_serialicer.hpp  jsonnavi.cpp  jsonnavi.hpp  simplehttpclient.cpp  simplehttpclient.hpp
test/: CMakeLists.txt  pcTest.cpp
